tests/baselines/reference/decrementOperatorWithUnsupportedStringType.errors.txt
==== tests/cases/compiler/decrementOperatorWithUnsupportedStringType.ts (55 errors) ====
    // -- operator on string type
    var STRING: string;
    var STRING1: string[] = ["", ""];
    
    function foo(): string { return ""; }
    
    class A {
        public a: string;
        static foo() { return ""; }
    }
    module M {
        export var n: string;
    }
    
    var objA = new A();
    
    // string type var
    var ResultIsNumber1 = --STRING;
                            ~~~~~~
!!! decrementOperatorWithUnsupportedStringType.ts(18,25): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    var ResultIsNumber2 = --STRING1;
                            ~~~~~~~
!!! decrementOperatorWithUnsupportedStringType.ts(19,25): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    
    var ResultIsNumber3 = STRING--;
                          ~~~~~~
!!! decrementOperatorWithUnsupportedStringType.ts(21,23): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    var ResultIsNumber4 = STRING1--;
                          ~~~~~~~
!!! decrementOperatorWithUnsupportedStringType.ts(22,23): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    
    // string type literal
    var ResultIsNumber5 = --"";
                            ~~
!!! decrementOperatorWithUnsupportedStringType.ts(25,25): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
                            ~~
!!! decrementOperatorWithUnsupportedStringType.ts(25,25): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    var ResultIsNumber6 = --{ x: "", y: "" };
                            ~~~~~~~~~~~~~~~~
!!! decrementOperatorWithUnsupportedStringType.ts(26,25): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
                            ~~~~~~~~~~~~~~~~
!!! decrementOperatorWithUnsupportedStringType.ts(26,25): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    var ResultIsNumber7 = --{ x: "", y: (s: string) => { return s; } };
                            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! decrementOperatorWithUnsupportedStringType.ts(27,25): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
                            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! decrementOperatorWithUnsupportedStringType.ts(27,25): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    
    var ResultIsNumber8 = ""--;
                          ~~
!!! decrementOperatorWithUnsupportedStringType.ts(29,23): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
                          ~~
!!! decrementOperatorWithUnsupportedStringType.ts(29,23): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    var ResultIsNumber9 = { x: "", y: "" }--;
                          ~~~~~~~~~~~~~~~~
!!! decrementOperatorWithUnsupportedStringType.ts(30,23): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
                          ~~~~~~~~~~~~~~~~
!!! decrementOperatorWithUnsupportedStringType.ts(30,23): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    var ResultIsNumber10 = { x: "", y: (s: string) => { return s; } }--;
                           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! decrementOperatorWithUnsupportedStringType.ts(31,24): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
                           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! decrementOperatorWithUnsupportedStringType.ts(31,24): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    
    // string type expressions
    var ResultIsNumber11 = --objA.a;
                             ~~~~~~
!!! decrementOperatorWithUnsupportedStringType.ts(34,26): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    var ResultIsNumber12 = --M.n;
                             ~~~
!!! decrementOperatorWithUnsupportedStringType.ts(35,26): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    var ResultIsNumber13 = --STRING1[0];
                             ~~~~~~~~~~
!!! decrementOperatorWithUnsupportedStringType.ts(36,26): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    var ResultIsNumber14 = --foo();
                             ~~~~~
!!! decrementOperatorWithUnsupportedStringType.ts(37,26): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
                             ~~~~~
!!! decrementOperatorWithUnsupportedStringType.ts(37,26): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    var ResultIsNumber15 = --A.foo();
                             ~~~~~~~
!!! decrementOperatorWithUnsupportedStringType.ts(38,26): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
                             ~~~~~~~
!!! decrementOperatorWithUnsupportedStringType.ts(38,26): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    var ResultIsNumber16 = --(STRING + STRING);
                             ~~~~~~~~~~~~~~~~~
!!! decrementOperatorWithUnsupportedStringType.ts(39,26): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
                             ~~~~~~~~~~~~~~~~~
!!! decrementOperatorWithUnsupportedStringType.ts(39,26): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    
    var ResultIsNumber17 = objA.a--;
                           ~~~~~~
!!! decrementOperatorWithUnsupportedStringType.ts(41,24): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    var ResultIsNumber18 = M.n--;
                           ~~~
!!! decrementOperatorWithUnsupportedStringType.ts(42,24): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    var ResultIsNumber19 = STRING1[0]--;
                           ~~~~~~~~~~
!!! decrementOperatorWithUnsupportedStringType.ts(43,24): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    var ResultIsNumber20 = foo()--;
                           ~~~~~
!!! decrementOperatorWithUnsupportedStringType.ts(44,24): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
                           ~~~~~
!!! decrementOperatorWithUnsupportedStringType.ts(44,24): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    var ResultIsNumber21 = A.foo()--;
                           ~~~~~~~
!!! decrementOperatorWithUnsupportedStringType.ts(45,24): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
                           ~~~~~~~
!!! decrementOperatorWithUnsupportedStringType.ts(45,24): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    var ResultIsNumber22 = (STRING + STRING)--;
                           ~~~~~~~~~~~~~~~~~
!!! decrementOperatorWithUnsupportedStringType.ts(46,24): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
                           ~~~~~~~~~~~~~~~~~
!!! decrementOperatorWithUnsupportedStringType.ts(46,24): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    
    // miss assignment operators
    --"";
      ~~
!!! decrementOperatorWithUnsupportedStringType.ts(49,3): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
      ~~
!!! decrementOperatorWithUnsupportedStringType.ts(49,3): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    --STRING;
      ~~~~~~
!!! decrementOperatorWithUnsupportedStringType.ts(50,3): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    --STRING1;
      ~~~~~~~
!!! decrementOperatorWithUnsupportedStringType.ts(51,3): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    --STRING1[0];
      ~~~~~~~~~~
!!! decrementOperatorWithUnsupportedStringType.ts(52,3): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    --foo();
      ~~~~~
!!! decrementOperatorWithUnsupportedStringType.ts(53,3): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
      ~~~~~
!!! decrementOperatorWithUnsupportedStringType.ts(53,3): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    --objA.a;
      ~~~~~~
!!! decrementOperatorWithUnsupportedStringType.ts(54,3): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    --M.n;
      ~~~
!!! decrementOperatorWithUnsupportedStringType.ts(55,3): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    --objA.a, M.n;
      ~~~~~~
!!! decrementOperatorWithUnsupportedStringType.ts(56,3): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    
    ""--;
    ~~
!!! decrementOperatorWithUnsupportedStringType.ts(58,1): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    ~~
!!! decrementOperatorWithUnsupportedStringType.ts(58,1): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    STRING--;
    ~~~~~~
!!! decrementOperatorWithUnsupportedStringType.ts(59,1): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    STRING1--;
    ~~~~~~~
!!! decrementOperatorWithUnsupportedStringType.ts(60,1): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    STRING1[0]--;
    ~~~~~~~~~~
!!! decrementOperatorWithUnsupportedStringType.ts(61,1): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    foo()--;
    ~~~~~
!!! decrementOperatorWithUnsupportedStringType.ts(62,1): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    ~~~~~
!!! decrementOperatorWithUnsupportedStringType.ts(62,1): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    objA.a--;
    ~~~~~~
!!! decrementOperatorWithUnsupportedStringType.ts(63,1): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    M.n--;
    ~~~
!!! decrementOperatorWithUnsupportedStringType.ts(64,1): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    objA.a--, M.n--;
    ~~~~~~
!!! decrementOperatorWithUnsupportedStringType.ts(65,1): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
              ~~~
!!! decrementOperatorWithUnsupportedStringType.ts(65,11): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.